--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>MARCIN GAWRON 2PTP</title>
         <link rel="stylesheet" href="cvCSS.css">
-        <link rel="icon" href="https://lh3.googleusercontent.com/pw/AM-JKLUDFjolbZY_Wxd4cmPTsw3Jbrz2YFFDBtsEEbxOk2RIbUqrttxPKLsWXHaKDNgVNV3prICTNKM2K2KICBRXCErOEk9d4YWwENQMWq0a1T74xpXTYBgv4hDVxCItgI4_F6ju_tGDjAs6CY8IkHEYCgw=s300-no?authuser=0" type="image/png">
+        <link rel="icon" href="https://zapodaj.net/images/94de004159bb0.png" type="image/png">
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, user-scalable=yes">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -87,12 +87,12 @@
             <p id="tekstOMnie" style="margin-left: 49.25%; margin-top: -8%; font-size: 300%;">KONTAKT</p>
             <a href="https://github.com/macinek67" target="_blank">
                 <div style="margin-top: 200px;">
-                    <img style="box-shadow: 0 0 1em rgb(255, 0, 242);" src="https://lh3.googleusercontent.com/pw/AM-JKLU5WRyXwHC1U1lPcAMs0DdQn9IusrpK9myUoFhPTLjH1jRWsW0LES_ab9LebsvtJGqcZ8Se1cw79XNNKLF-c70MtjyVSt4EmXXpV2w-t4DQJkt88wQg9JHHLh6Ce9rq1bqf_1IBBYtxHhsHL3tiDHg=s970-no?authuser=0" id="git">
+                    <img style="box-shadow: 0 0 1em rgb(255, 0, 242);" src="https://zapodaj.net/images/2612679c116f6.png" id="git">
                     <p id="tekstOMnie" style="margin-left: 950px; margin-top: -56px; font-size: 300%;">https://github.com/macinek67</p>
                 </div>
             </a>
             <br>
-            <img style="box-shadow: 0 0 1em rgb(255, 0, 242);" src="https://lh3.googleusercontent.com/pw/AM-JKLXiTSIu9ZBUMdiyeLo7Aiu16y9707H1o3uFbmS5RV934PTA6zZAz49h7sqQP57OzJThrIkDmghDfEbsMwRLhcZkjvL6P2qV5qjVl5amW6l_m9v2ydnlKJOnG2gKMs4nEgOADDhbJZyInG9ZsyQp2H8=s300-no?authuser=0" id="mail">
+            <img style="box-shadow: 0 0 1em rgb(255, 0, 242);" src="https://zapodaj.net/images/3a6b4b4d012cb.png" id="mail">
             <p id="tekstOMnie" style="margin-left: 945px; margin-top: -56px; font-size: 300%;">marcingawron222@gmail.com</p>
         </div>
         <div id="kontakt" style="width: 1880px; height: 1000px; background-color: black;">
